# sdl-core

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  component.h  config.h  core.cpp  core.h  entity.h  entity_component.h  entity_manager.cpp  entity_manager.h  entity_system.h  keyboard.h  main.cpp  sdl_core  sdl_w.cpp  sdl_w.h  settings.h  types.h
.cache/clangd/index/: component.h.F78B71D0DC9BCC0E.idx  config.h.5B2AA8AD6F8D603C.idx  core.cpp.2C2076670637959F.idx  core.h.CB08B4D8D22F743E.idx  entity_component.h.A1AD0474D785861E.idx  entity_manager.cpp.9D29DADAB280ED56.idx  entity_manager.h.0E5751BB494DD090.idx  entity_system.h.B30588275FED021D.idx  keyboard.h.1CD7FC5497D0155B.idx  main.cpp.F1D74376AAADDD62.idx  main.cpp.F1D74376AAADDD62_BASE_401037.idx  main.cpp.F1D74376AAADDD62_REMOTE_401037.idx  sdl_w.cpp.F9B0B0E9AF6E6C28.idx  sdl_w.h.8BA0C2D0BF6EBA87.idx  settings.h.6BCDB232D245DE15.idx  types.h.61BCA482CCABC8B0.idx
